--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-ebi_eva_common_pyutils>=0.3.22
+git+https://github.com/tcezard/eva-common-pyutils.git@EVA3322-refactor#egg=ebi-eva-common-pyutils[eva-internal]
 pysam~=0.16
 pytest~=6.2
