--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/tcezard/eva-common-pyutils.git@EVA3322-refactor#egg=ebi-eva-common-pyutils[eva-internal]
+ebi-eva-common-pyutils[eva-internal]==0.5.8.dev2
 pysam~=0.16
 pytest~=6.2
