--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,9 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.8]
-        java-version: [1.8]
+        java-version: [1.11]
+        java-version: [1.11]
+        nextflow-version: [21.10.5]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,8 +29,10 @@ jobs:
         java-version: ${{ matrix.java-version }}
     - name: Set up Nextflow
       run: |
-        sudo bash -c "export JAVA_CMD="$(which java)" && cd /usr/bin && (curl -s https://get.nextflow.io | bash) && chmod 755 nextflow"
-        /usr/bin/nextflow -version
+        mkdir /tmp/nextflow && cd /tmp/nextflow
+        wget -qO- https://github.com/nextflow-io/nextflow/releases/download/v${{ matrix.nextflow-version }}/nextflow-${{ matrix.nextflow-version }}-all | bash
+        echo "/tmp/nextflow" >> $GITHUB_PATH
+        cd -
     - name: Set up BCFtools
       run: |
         sudo apt update
